k8s/applications/web/mastadon/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastadon
  namespace: mastadon
spec:
  type: ClusterIP
  selector:
    app: mastadon
  ports:
    - name: http
      port: 80
      targetPort: http
